remove space between sub/method names and opening paren

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -97,7 +97,7 @@ designed to be more concise in concepts than in keystrokes.
 
 As a result, there are various places in the syntax where whitespace is
 optional in Perl 5, but is either mandatory or forbidden in Perl 6. Many of
-those restrictions are unlikely to concern much real-life Perl code (e.g.
+those restrictions are unlikely to concern much real-life Perl code (e.g.,
 whitespace being disallowed between the sigil and name of a variable), but
 there are a few that will unfortunately conflict with some Perl hackers'
 habitual coding styles:
@@ -602,7 +602,7 @@ expect Pairs. However, this requires you to change all sub calls at once.
     # Note: no curly braces in this sub call
     get_the_loot( 'diamonds', quiet_level => 'very', quantity => 9 );
     # Perl 6, original API
-    sub get_the_loot ( $loot, *%options ) { # The * means to slurp everything
+    sub get_the_loot( $loot, *%options ) { # The * means to slurp everything
         ...
     }
     get_the_loot( 'diamonds', quiet_level => 'very', quantity => 9 ); # Note: no curly braces in this API
@@ -610,7 +610,7 @@ expect Pairs. However, this requires you to change all sub calls at once.
     # Perl 6, API changed to specify valid options
     # The colon before the sigils means to expect a Pair,
     # with the key having the same name as the variable.
-    sub get_the_loot ( $loot, :$quiet_level?, :$quantity = 1 ) {
+    sub get_the_loot( $loot, :$quiet_level?, :$quantity = 1 ) {
         # This version will check for unexpected arguments!
         ...
     }
@@ -1117,7 +1117,7 @@ Switch parsing is now done by the parameter list of the C<MAIN> subroutine.
     5
 
     # Perl 6
-        sub MAIN ( Int :$xyz ) {
+        sub MAIN( Int :$xyz ) {
             say $xyz if $xyz.defined;
         }
     perl6 example.p6 --xyz=5
@@ -1436,7 +1436,7 @@ Switch parsing is now done by the parameter list of the C<MAIN> subroutine.
         Died at c.pl line 3.
 
     # Perl 6
-        sub MAIN ( Int :$length = 24, :file($data) = 'file.dat', Bool :$verbose ) {
+        sub MAIN( Int :$length = 24, :file($data) = 'file.dat', Bool :$verbose ) {
             say $length if $length.defined;
             say $data   if $data.defined;
             say 'Verbosity ', ($verbose ?? 'on' !! 'off');
