remove incorrect statement

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -286,8 +286,7 @@ one sublist, or many:
 
 It is worth noting that mixing binding and sigilless variables
 in these cases requires a bit of finesse, because there is no Scalar
-intermediary used during binding. (Notice the space before the opening '('
-which is normally not a good practice.)
+intermediary used during binding.
 
     my $a = (1, 2);  # Normal assignment, equivalent to $(1, 2)
     grab($a);       # grab 1 2
