Added docs for Map.antipairs. moritz++

--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -124,6 +124,20 @@ Usage:
 
 Returns a list of all pairs in the Map.
 
+=head2 method antipairs
+
+Defined as:
+
+    method antipairs(Map:D:) returns Seq:D
+
+Returns all keys and their respective values as a L<Seq|/type/Seq> of C<Pair>s
+where the keys and values have been exchanged, i.e. the opposite of method
+L<pairs|#method_pairs>. Unlike the L<invert|#method_invert> method, there is
+no attempt to expand list values into multiple pairs.
+
+    my $m = Map.new('a' => (2, 3), 'b' => 17);
+    say $m.antipairs;                                  # ((2 3) => a 17 => b)
+
 =head2 method invert
 
 Defined as:
