Added missing info and example to the docs for Map.invert

--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -130,6 +130,10 @@ Defined as:
 
     method antipairs(Map:D:) returns Seq:D
 
+Usage:
+
+    MAP.antipairs
+
 Returns all keys and their respective values as a L<Seq|/type/Seq> of C<Pair>s
 where the keys and values have been exchanged, i.e. the opposite of method
 L<pairs|#method_pairs>. Unlike the L<invert|#method_invert> method, there is
@@ -142,13 +146,19 @@ no attempt to expand list values into multiple pairs.
 
 Defined as:
 
-    method invert(Map:D:) returns List:D
+    method invert(Map:D:) returns Seq:D
 
 Usage:
 
     MAP.invert
 
-Returns a list of pairs, but with key and value exchanged.
+Returns all keys and their respective values as a L<Seq|/type/Seq> of C<Pair>s
+where the keys and values have been exchanged. The difference between C<invert>
+and L<antipairs|#method_antipairs> is that C<invert> expands list values into
+multiple pairs.
+
+    my $m = Map.new('a' => (2, 3), 'b' => 17);
+    say $m.invert;                                    # (2 => a 3 => a 17 => b)
 
 =head2 method kv
 
