fix Pod::Block ref to Pod::Heading

--- a/Type/Pod/Block.pod
+++ b/Type/Pod/Block.pod
@@ -20,9 +20,9 @@ Useful subclasses:
     L<Pod::Block::Named>    named blocks
     L<Pod::Block::Code>     code blocks
     L<Pod::Block::Comment>  comments
-    L<Pod::Block::Heading>  =head1 etc. headings
     L<Pod::Block::Table>    =begin/end table
                             tabular data
+    L<Pod::Heading>         =head1 etc. headings
     L<Pod::Item>            list items
 
 =end table
