Fixed typo and two missing C<>'s

--- a/Type/Semaphore.pod
+++ b/Type/Semaphore.pod
@@ -36,7 +36,7 @@ Another example is a protection around code updating sensitive data. In such a
 case the semaphore is typically initialized to 1.
 
 It is important to have a release on every exit of your program! While this is
-obvious, it is easy to fall in traps such as trowing an exception caused by some
+obvious, it is easy to fall in traps such as throwing an exception caused by some
 event. When the program dies there is no problem. When the exception is caught
 your program might eventually come back to the acquire method and will hang
 indefinitely.
@@ -63,8 +63,8 @@ releases the semaphore.
 
   method try_acquire() returns Bool
 
-Same as acquire but will not block. Instead it returns True if access is
-permitted or False otherwise.
+Same as acquire but will not block. Instead it returns C<True> if access is
+permitted or C<False> otherwise.
 
 =head2 method release
 
