Added docs for Map.Bool

--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -174,4 +174,19 @@ Returns a list of keys and values interleaved.
 
     Map.new('a', 1, 'b', 2).kv  # a, 1, b, 2 OR b, 2, a, 1
 
+=head2 method Bool
+
+Defined as:
+
+    method Bool(Map:D:) returns Bool:D
+
+Usage:
+
+    MAP.Bool
+
+Returns C<True> if the invocant contains at least one key/value pair.
+
+    my $m = Map.new('a' => 2, 'b' => 17);
+    say $m.Bool;                                      # True
+
 =end pod
