--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -174,6 +174,36 @@ Returns a list of keys and values interleaved.
 
     Map.new('a', 1, 'b', 2).kv  # a, 1, b, 2 OR b, 2, a, 1
 
+=head2 method Int
+
+Defined as:
+
+    method Int(Map:D:) return Int:D
+
+Usage:
+
+    MAP.Int
+
+Returns the number of pairs stored in the C<Map> (same as C<.elems>).
+
+    my $m = Map.new('a' => 2, 'b' => 17);
+    say $m.Int;                                       # 2
+
+=head2 method Numeric
+
+Defined as:
+
+    method Numeric(Map:D:) return Int:D
+
+Usage:
+
+    MAP.Numeric
+
+Returns the number of pairs stored in the C<Map> (same as C<.elems>).
+
+    my $m = Map.new('a' => 2, 'b' => 17);
+    say $m.Numeric;                                   # 2
+
 =head2 method Bool
 
 Defined as:
