--- a/Type/Instant.pod
+++ b/Type/Instant.pod
@@ -44,4 +44,17 @@ second.
     say DateTime.new("1999-01-01T00:00:00Z").Instant.to-posix  # (915148800 False)
     say DateTime.new('1998-12-31T23:59:60Z').Instant.to-posix; # (915148800 True)
 
+=head2 method Date
+
+Defined as:
+
+    method Date(Instant:D:) returns Date:D
+
+Returns a L<Date|/type/Date> object set to the date of the invocant.
+
+    # the results given will vary from system to system
+    my $i = "/etc/passwd".IO.modified;
+    say $i;                                       # Instant:1451489025.878018
+    say $i.Date;                                  # 2015-12-30
+
 =end pod
