remove blurb about possible change

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -292,8 +292,7 @@ L<Functions|/language/functions#Functions>.
 
 Finally, note that, currently, when declaring the functions whitespace
 may be used between a function or method name and the parentheses
-surrounding the parameter list without problems (although that may
-change in the future).
+surrounding the parameter list without problems.
 
 =end pod
 
