Added docs for Pair.Str

--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -146,4 +146,20 @@ Makes the I<value> of the C<Pair> read-only, by removing it from its L<Scalar co
     $p.freeze.say;                    # orange
     $p.value = "a new apple";         # Fails with 'Cannot modify an immutable Str'
 
+=head2 method Str
+
+Defined as:
+
+    multi method Str(Pair:D:) returns Str:D
+
+Usage:
+
+    Pair.Str
+
+Returns a string representation of the invocant formatted
+as I<key ~ \t ~ value>.
+
+    my $b = eggs => 3;
+    say $b.Str;                                       # eggs  3
+
 =end pod
