Fixed two typos

--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -178,7 +178,7 @@ Returns a list of keys and values interleaved.
 
 Defined as:
 
-    method Int(Map:D:) return Int:D
+    method Int(Map:D:) returns Int:D
 
 Usage:
 
@@ -193,7 +193,7 @@ Returns the number of pairs stored in the C<Map> (same as C<.elems>).
 
 Defined as:
 
-    method Numeric(Map:D:) return Int:D
+    method Numeric(Map:D:) returns Int:D
 
 Usage:
 
