Added docs for Pair.pairs

--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -44,6 +44,21 @@ Returns a new C<Pair> object with key and value exchanged.
     say $p.key;         # Perl
     say $p.value;       # 6
 
+=head2 method pairs
+
+Defined as:
+
+    method pairs(Pair:D:) returns List:D
+
+Usage:
+
+    Pair.pairs
+
+Returns a L<List|/type/List> containing the invocant.
+
+    my $p = cars => 2;
+    say $p.pairs;                                     # (cars => 2)
+
 =head2 method key
 
 Defined as:
