tell why NaN values are produced

--- a/Type/Num.pod
+++ b/Type/Num.pod
@@ -12,7 +12,9 @@ precision".
 
 =head2 NaN
 
-The value X<C<NaN>|NaN (definition)> is an instance of C<Num> and represents a float point
-not-a-number value. It is defined and boolifies to True.
+The value X<C<NaN>|NaN (definition)> is an instance of C<Num> and represents a
+float point not-a-number value. It is defined and boolifies to True. C<NaN> is
+the result of undefined float point number operations and depends on the CPU or
+software implementation of float point numbers on the system running the code.
 
 =end pod
