doc use variables :D

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -911,6 +911,17 @@ re-applied by assigning C<Nil> to it:
     $product = Nil;
     say $product;                       # 1
 
+=head2 Default Defined Variables Pragma
+
+To force all variables to have a definedness contraint use the prama C<use
+variables :D>. The pragma is lexically scoped and can be switched of with C<use
+variables :_>.
+
+    use variables :D;
+    my Int $i;
+    # OUTPUT«===SORRY!=== Error while compiling <tmp>␤Variable definition of type Int:D (implicit :D by pragma) requires an initializer ...
+    my Int $i = 1; # that works
+    { use variables :_; my Int $i; } # switch it of in this block
 
 =head1 Special Variables
 
