add constant to index

--- a/Language/terms.pod
+++ b/Language/terms.pod
@@ -163,6 +163,7 @@ Variables are discussed in the L<variable language docs |/language/variables>.
 
 =head1 Constants
 
+X<|constant (Terms)>
 Constants are declared with C<constant> and do not require a sigil. The RHS is evaluated at compile time, what may be too early to make sense.
 
     constant Pi = 3.123; # if you happen to be Babylonian
